--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,6 +1,7 @@
 FROM openjdk:8
 MAINTAINER Ivan Ermilov <ivan.s.ermilov@gmail.com>
 
+echo "deb http://archive.debian.org/debian stretch main contrib non-free" > /etc/apt/sources.list
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends net-tools curl netcat vim
 
 ENV HBASE_VERSION 1.2.6
