--- a/hbase-distributed-local.env
+++ b/hbase-distributed-local.env
@@ -9,4 +9,4 @@ HBASE_CONF_hbase_master_info_port=16010
 HBASE_CONF_hbase_regionserver_port=16020
 HBASE_CONF_hbase_regionserver_info_port=16030
 
-HBASE_MANAGES_ZK=false
+HBASE_MANAGES_ZK=ture
